--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,15 @@
 * {
-/*  border: 1px solid black; */
+  /* border: 1px solid black; */
   font-family: Roboto;
 }
 @font-face {
   font-family: Roboto;
   src: url(fonts/Roboto/Roboto-VariableFont_wdth\,wght.ttf);
 }
-
+@font-face {
+  font-family: Roboto-italic;
+  src: url(fonts/Roboto/Roboto-Italic-VariableFont_wdth\,wght.ttf);
+}
 body {
   
   background-color: blue;
@@ -41,6 +44,7 @@ body {
 
 .hc-main1 {
   max-width: 350px;
+  flex-shrink:1
 }
  
 .hc-box1 {
@@ -60,6 +64,7 @@ body {
   background-color: #3882F6;
   padding: 5px 25px;
   border-radius: 5px;
+  border: 0;
 }
 
 .hc-main2 {
@@ -68,9 +73,57 @@ body {
   align-items: center;
   background-color: gray;
   padding: 0 200px;
+  flex-shrink: 0;
+  max-height: 221px;
 }
 
-
+.top {
+  display: flex;
+  flex-direction: column;
+  }
+.top-info {
+  display: flex;
+  background-color: white;
+  justify-content: center;
+  padding: 25px 0;
+  font-size: 36px;
+  color: #1F2937;
+  font-weight: 900;
+}
+.top-content {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 100px;
+}
+.top-box1 {
+  padding-top: 10px;
+}
+.top-box2 {
+  padding-top: 5px;
+}
+.top-box1, .top-box2 {
+  background-color: white;
+  width: 1000px;
+  max-height: 600px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.a-box {
+  min-height: 90px;
+  min-width: 90px;
+  border: 2px solid #3882F6;
+  border-radius: 10px;
+}
+.b-box {
+  font-size: 10px;
+  max-width: 90px;
+  text-align: center;
+}
 .top,
 .middle,
 .bottom,
@@ -79,12 +132,33 @@ body {
   min-width: 40px;
 }
 
-.top {
-  background-color: orange;
-}
 
+
+.middle, .middle-content, .mc-box {
+  display: flex;
+  background-color: #E5E7EB;
+}
 .middle {
-  background-color: yellow;
+  justify-content: center;
+  align-items: center;
+
+}
+.middle-content {
+font-size: 20px;
+color: #1F2937;  
+font-family: Roboto-italic;
+padding: 100px 0;
+font-weight: 300;
+width: 750px;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+justify-content: flex-end;
+}
+.mc-box {
+  display: flex;
+  font-weight: 800;
+  padding-top: 20px;
 }
 
 .bottom {
@@ -119,4 +193,31 @@ ul {
   a:visited {
     color: #E5E7EB;
   }
-  
+  a:hover {
+    color: hotpink;
+  }
+
+
+  /* NOTE TO SELF vedr. lenker*/
+
+/* unvisited link
+a:link {
+  color: red;
+}
+
+* visited link *
+a:visited {
+  color: green;
+}
+
+* mouse over link *
+a:hover {
+  color: hotpink;
+}
+
+* selected link *
+
+a:active {
+  color: blue;
+}
+ */
