--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@
 }
 body {
   
-  background-color: blue;
+
   margin: 0px;
   border: 0px;
 }
@@ -96,7 +96,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-bottom: 100px;
+  padding: 40px 400px 0px 400px;
 }
 .top-box1 {
   padding-top: 10px;
@@ -124,6 +124,15 @@ body {
   max-width: 90px;
   text-align: center;
 }
+/* Bedre slik ? Ref størrelse på boks ift top-info */
+.a-box, .b-box {
+  min-height: 130px;
+  min-width: 130px;
+}
+
+
+
+
 .top,
 .middle,
 .bottom,
@@ -137,19 +146,21 @@ body {
 .middle, .middle-content, .mc-box {
   display: flex;
   background-color: #E5E7EB;
+  
 }
 .middle {
   justify-content: center;
   align-items: center;
+  
 
 }
 .middle-content {
-font-size: 20px;
+font-size: 36px;
 color: #1F2937;  
 font-family: Roboto-italic;
 padding: 100px 0;
 font-weight: 300;
-width: 750px;
+max-width: 625px;
 display: flex;
 flex-direction: row;
 flex-wrap: wrap;
@@ -157,16 +168,69 @@ justify-content: flex-end;
 }
 .mc-box {
   display: flex;
+  font-size: 15px;
   font-weight: 800;
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
+
 .bottom {
-  background-color: brown;
+display: flex;
+background-color: #3882F6;
+margin: 100px 400px;
+padding: 55px 250px;
+color: #E5E7EB;
+justify-content: center;
+border-radius: 10px;
+}
+.bottom-main {
+display: flex;
+min-width: 900px;
+justify-content: space-between;
+}
+.bottom1 {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.bottom-1a {
+  font-size: 25px;
+  font-weight: 700;
+}
+.bottom-1b {
+  font-size: 20px;
+  font-weight: 400;
+}
+.bottom2 {
+  display: flex;
+  min-width: 200px;
+  justify-content: center;
+  align-items: center;
+}
+.bottom-button {
+  color: #E5E7EB;
+  font-size: 18px;
+  font-weight: 900;
+  background-color: #3882F6;
+  padding: 5px 25px;
+  border-radius: 5px;
+  border: 3px solid #E5E7EB;
 }
 
 .footer {
-  background-color: green;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  color: #F9FAF8;
+  font-size: 15px;
+  font-weight: 400;
+  background-color: #1F2937;
+  padding: 10px;
+}
+
+
+.footer {
+
 }
 
 ul {
